--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ main {
   width: 100%;
   height: 100%;
   opacity: 0.15; 
-  background-image: url('images/city_park.jpg');
+  background-image: url('images/sidewalk.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
