--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ main {
   display: grid;
   justify-content: center;
   text-align: center;
-  font-size: 2em;
+  font-size: 1.8em;
   position: relative;
   top: 92px;
 }
@@ -101,7 +101,7 @@ input, button {
 
 #pricing {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   grid-gap: 20px;
   padding-top: 60px;
   padding-bottom: 130px;
@@ -109,8 +109,8 @@ input, button {
 
 .stand, .lux {
   border-style: solid;
-  border-width: medium;
-  width: 370px;
+  border-width: thin;
+  width: 330px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -174,6 +174,7 @@ button {
   background-color: #81b214;
   transition: .3s;
   border-color: black;
+  margin-top: 10px;
 }
 
 #submit:hover, #submit:focus, button:hover, button:focus {
@@ -188,6 +189,7 @@ button {
   .nav-setting {
     display: flex;
     flex-direction: column;
+    gap: 5px;
   }
   
   .nav-link {
@@ -197,15 +199,59 @@ button {
   }
   
   #header-img {
-    width: 122px;
-    height: 122px;
+    width: 132px;
+    height: 132px;
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 450px) {
   #video {
-    width:418px;
-    height: 236px;
+    width:360px;
+    height: 200px;
+  }
+  
+  #nav-bar {
+    background: linear-gradient(90deg, #8ab6d6 0%, #8ab6d6 80%, #A71157);
+  }
+
+  .nav-link {
+    padding: 0px 0px 0px 0px;
+    font-size: 1.5em;
+    line-height: 20px;
+  }
+
+  #header-img {
+    margin-left: 15px;
+    width: 108px;
+    height: 108px;
+  }
+
+  main {
+    font-size: 1.3em;
+  }
+
+  h1 {
+    font-size: 1em;
+  }
+
+  #slogan {
+    font-size: 1em;
+  }
+
+  .stand, .lux {
+  width: 310px;
+  }
+
+  footer {
+    background: linear-gradient(270deg, #8ab6d6 0%, #8ab6d6 80%, #A71157);
+  }
+
+  .foot-setting {
+    font-size: 1.3em;
+  }
+
+  .ref {
+    font-size: 0.6em;
   }
 }
 
